--- a/examples/forms/index.html
+++ b/examples/forms/index.html
@@ -16,6 +16,8 @@
     <link rel="stylesheet" href="../../bower_components/angular-ui-select/dist/select.css">
     <link rel="stylesheet" href="../../bower_components/nz-toggle/dist/nz-toggle.css">
     <link rel="stylesheet" href="../../bower_components/angular-bootstrap-toggle/dist/angular-bootstrap-toggle.min.css">
+    <link rel="stylesheet" href="../../bower_components/angular-confirm/css/angular-confirm.css">
+    <link rel="stylesheet" href="../../bower_components/angular-dialog-service/dist/dialogs.css">
     <!-- endinject -->
     <!-- inject:css -->
     <link rel="stylesheet" href="../../dist/forms/style.css">
@@ -60,10 +62,14 @@
 <script src="../../bower_components/angular-drag-and-drop-lists/angular-drag-and-drop-lists.js"></script>
 <script src="../../bower_components/underscore/underscore.js"></script>
 <script src="../../bower_components/angular-sanitize/angular-sanitize.js"></script>
+<script src="../../bower_components/angular-translate/angular-translate.js"></script>
 <script src="../../bower_components/bootstrap/dist/js/bootstrap.js"></script>
 <script src="../../bower_components/angular-bootstrap/ui-bootstrap-tpls.js"></script>
 <script src="../../bower_components/bootstrap-ui-datetime-picker/dist/datetime-picker.js"></script>
 <script src="../../bower_components/angular-bootstrap-toggle/dist/angular-bootstrap-toggle.min.js"></script>
+<script src="../../bower_components/angular-confirm/js/angular-confirm.js"></script>
+<script src="../../bower_components/angular-dialog-service/dist/dialogs.js"></script>
+<script src="../../bower_components/angular-dialog-service/dist/dialogs-default-translations.js"></script>
 <!-- endinject -->
 <script src="../lib/ng-tables/ng-table.min.js"></script>
 <!-- inject:js -->
