--- a/examples/forms/index.html
+++ b/examples/forms/index.html
@@ -63,6 +63,7 @@
 <script src="../../bower_components/underscore/underscore.js"></script>
 <script src="../../bower_components/angular-sanitize/angular-sanitize.js"></script>
 <script src="../../bower_components/angular-translate/angular-translate.js"></script>
+<script src="../../bower_components/angular-messages/angular-messages.js"></script>
 <script src="../../bower_components/bootstrap/dist/js/bootstrap.js"></script>
 <script src="../../bower_components/angular-bootstrap/ui-bootstrap-tpls.js"></script>
 <script src="../../bower_components/bootstrap-ui-datetime-picker/dist/datetime-picker.js"></script>
