--- a/examples/forms/index.html
+++ b/examples/forms/index.html
@@ -7,20 +7,20 @@
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
     <title>AngularJS ODS Lib</title>
 
-    <link rel="stylesheet" href="../../bower_components/bootstrap/dist/css/bootstrap.css">
-    <link rel="stylesheet" href="../../bower_components/font-awesome/css/font-awesome.min.css">
+    <link rel="stylesheet" href="../bower_components/bootstrap/dist/css/bootstrap.css">
+    <link rel="stylesheet" href="../bower_components/font-awesome/css/font-awesome.min.css">
 
     <!-- Bower dependencies -->
     <!-- build:css css/seed.min.css -->
     <!-- bower:css -->
-    <link rel="stylesheet" href="../../bower_components/angular-ui-select/dist/select.css">
-    <link rel="stylesheet" href="../../bower_components/nz-toggle/dist/nz-toggle.css">
-    <link rel="stylesheet" href="../../bower_components/angular-bootstrap-toggle/dist/angular-bootstrap-toggle.min.css">
-    <link rel="stylesheet" href="../../bower_components/angular-confirm/css/angular-confirm.css">
-    <link rel="stylesheet" href="../../bower_components/angular-dialog-service/dist/dialogs.css">
+    <link rel="stylesheet" href="../bower_components/angular-ui-select/dist/select.css">
+    <link rel="stylesheet" href="../bower_components/nz-toggle/dist/nz-toggle.css">
+    <link rel="stylesheet" href="../bower_components/angular-bootstrap-toggle/dist/angular-bootstrap-toggle.min.css">
+    <link rel="stylesheet" href="../bower_components/angular-confirm/css/angular-confirm.css">
+    <link rel="stylesheet" href="../bower_components/angular-dialog-service/dist/dialogs.css">
     <!-- endinject -->
     <!-- inject:css -->
-    <link rel="stylesheet" href="../../dist/forms/style.css">
+    <link rel="stylesheet" href="../dist/forms/style.css">
     <!-- endinject -->
     <!-- endbuild -->
 
@@ -50,27 +50,27 @@
 
 <!-- build:js js/seed.min.js -->
 <!-- bower:js -->
-<script src="../../bower_components/jquery/dist/jquery.js"></script>
-<script src="../../bower_components/angular/angular.js"></script>
-<script src="../../bower_components/jSignature/src/jSignature.js"></script>
-<script src="../../bower_components/jSignature/src/plugins/jSignature.CompressorBase30.js"></script>
-<script src="../../bower_components/jSignature/src/plugins/jSignature.CompressorSVG.js"></script>
-<script src="../../bower_components/jSignature/src/plugins/jSignature.UndoButton.js"></script>
-<script src="../../bower_components/webcam-directive/dist/webcam.min.js"></script>
-<script src="../../bower_components/angular-ui-select/dist/select.js"></script>
-<script src="../../bower_components/nz-toggle/dist/nz-toggle.js"></script>
-<script src="../../bower_components/angular-drag-and-drop-lists/angular-drag-and-drop-lists.js"></script>
-<script src="../../bower_components/underscore/underscore.js"></script>
-<script src="../../bower_components/angular-sanitize/angular-sanitize.js"></script>
-<script src="../../bower_components/angular-translate/angular-translate.js"></script>
-<script src="../../bower_components/angular-messages/angular-messages.js"></script>
-<script src="../../bower_components/bootstrap/dist/js/bootstrap.js"></script>
-<script src="../../bower_components/angular-bootstrap/ui-bootstrap-tpls.js"></script>
-<script src="../../bower_components/bootstrap-ui-datetime-picker/dist/datetime-picker.js"></script>
-<script src="../../bower_components/angular-bootstrap-toggle/dist/angular-bootstrap-toggle.min.js"></script>
-<script src="../../bower_components/angular-confirm/js/angular-confirm.js"></script>
-<script src="../../bower_components/angular-dialog-service/dist/dialogs.js"></script>
-<script src="../../bower_components/angular-dialog-service/dist/dialogs-default-translations.js"></script>
+<script src="../bower_components/jquery/dist/jquery.js"></script>
+<script src="../bower_components/angular/angular.js"></script>
+<script src="../bower_components/jSignature/src/jSignature.js"></script>
+<script src="../bower_components/jSignature/src/plugins/jSignature.CompressorBase30.js"></script>
+<script src="../bower_components/jSignature/src/plugins/jSignature.CompressorSVG.js"></script>
+<script src="../bower_components/jSignature/src/plugins/jSignature.UndoButton.js"></script>
+<script src="../bower_components/webcam-directive/dist/webcam.min.js"></script>
+<script src="../bower_components/angular-ui-select/dist/select.js"></script>
+<script src="../bower_components/nz-toggle/dist/nz-toggle.js"></script>
+<script src="../bower_components/angular-drag-and-drop-lists/angular-drag-and-drop-lists.js"></script>
+<script src="../bower_components/underscore/underscore.js"></script>
+<script src="../bower_components/angular-sanitize/angular-sanitize.js"></script>
+<script src="../bower_components/angular-translate/angular-translate.js"></script>
+<script src="../bower_components/angular-messages/angular-messages.js"></script>
+<script src="../bower_components/bootstrap/dist/js/bootstrap.js"></script>
+<script src="../bower_components/angular-bootstrap/ui-bootstrap-tpls.js"></script>
+<script src="../bower_components/bootstrap-ui-datetime-picker/dist/datetime-picker.js"></script>
+<script src="../bower_components/angular-bootstrap-toggle/dist/angular-bootstrap-toggle.min.js"></script>
+<script src="../bower_components/angular-confirm/js/angular-confirm.js"></script>
+<script src="../bower_components/angular-dialog-service/dist/dialogs.js"></script>
+<script src="../bower_components/angular-dialog-service/dist/dialogs-default-translations.js"></script>
 <!-- endinject -->
 <script src="../lib/ng-tables/ng-table.min.js"></script>
 <!-- inject:js -->
