Added datetime picker commponent.

--- a/examples/forms/index.html
+++ b/examples/forms/index.html
@@ -20,7 +20,7 @@
     <link rel="stylesheet" href="../bower_components/angular-dialog-service/dist/dialogs.css">
     <!-- endinject -->
     <!-- inject:css -->
-    <link rel="stylesheet" href="../dist/forms/style.css">
+    <link rel="stylesheet" href="../../dist/forms/style.css">
     <!-- endinject -->
     <!-- endbuild -->
 
@@ -64,6 +64,7 @@
 <script src="../bower_components/angular-sanitize/angular-sanitize.js"></script>
 <script src="../bower_components/angular-translate/angular-translate.js"></script>
 <script src="../bower_components/angular-messages/angular-messages.js"></script>
+<script src="../bower_components/angular-jquery/dist/angular-jquery.js"></script>
 <script src="../bower_components/bootstrap/dist/js/bootstrap.js"></script>
 <script src="../bower_components/angular-bootstrap/ui-bootstrap-tpls.js"></script>
 <script src="../bower_components/bootstrap-ui-datetime-picker/dist/datetime-picker.js"></script>
@@ -71,6 +72,7 @@
 <script src="../bower_components/angular-confirm/js/angular-confirm.js"></script>
 <script src="../bower_components/angular-dialog-service/dist/dialogs.js"></script>
 <script src="../bower_components/angular-dialog-service/dist/dialogs-default-translations.js"></script>
+<script src="../bower_components/angular-bootstrap-affix/dist/angular-bootstrap-affix.js"></script>
 <!-- endinject -->
 <script src="../lib/ng-tables/ng-table.min.js"></script>
 <!-- inject:js -->
