Fixed angular-confirm dist files.

--- a/examples/forms/index.html
+++ b/examples/forms/index.html
@@ -15,7 +15,7 @@
     <!-- bower:css -->
     <link rel="stylesheet" href="../bower_components/angular-ui-select/dist/select.css">
     <link rel="stylesheet" href="../bower_components/nz-toggle/dist/nz-toggle.css">
-    <link rel="stylesheet" href="../bower_components/angular-confirm/css/angular-confirm.css">
+    <link rel="stylesheet" href="../bower_components/angular-confirm/dist/angular-confirm.min.css">
     <link rel="stylesheet" href="../bower_components/angular-bootstrap-toggle/dist/angular-bootstrap-toggle.min.css">
     <link rel="stylesheet" href="../bower_components/angular-dialog-service/dist/dialogs.css">
     <!-- endinject -->
@@ -64,7 +64,7 @@
 <script src="../bower_components/nz-toggle/dist/nz-toggle.js"></script>
 <script src="../bower_components/angular-drag-and-drop-lists/angular-drag-and-drop-lists.js"></script>
 <script src="../bower_components/underscore/underscore.js"></script>
-<script src="../bower_components/angular-confirm/js/angular-confirm.js"></script>
+<script src="../bower_components/angular-confirm/dist/angular-confirm.min.js"></script>
 <script src="../bower_components/angular-translate/angular-translate.js"></script>
 <script src="../bower_components/angular-jquery/dist/angular-jquery.js"></script>
 <script src="../bower_components/bootstrap/dist/js/bootstrap.js"></script>
