--- a/examples/index.html
+++ b/examples/index.html
@@ -52,6 +52,8 @@
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Components<span class="caret"></span></a>
                     <ul class="dropdown-menu">
                         <li><a href="forms/index.html">Forms Builder</a></li>
+                        <li><a href="address/index.html">Address directive</a></li>
+                        <li><a href="ckeditor/index.html">CKEditor plugin Sample</a></li>
                         <!--<li><a href="#">Another action</a></li>-->
                         <!--<li><a href="#">Something else here</a></li>-->
                         <!--<li role="separator" class="divider"></li>-->
