--- a/examples/index.html
+++ b/examples/index.html
@@ -54,6 +54,7 @@
                         <li><a href="forms/index.html">Forms Builder</a></li>
                         <li><a href="address/index.html">Address directive</a></li>
                         <li><a href="ckeditor/index.html">CKEditor plugin Sample</a></li>
+                        <li><a href="jsignature/index.html">JSignature directive</a></li>
                         <!--<li><a href="#">Another action</a></li>-->
                         <!--<li><a href="#">Something else here</a></li>-->
                         <!--<li role="separator" class="divider"></li>-->
