--- a/examples/ckeditor/index.html
+++ b/examples/ckeditor/index.html
@@ -52,18 +52,19 @@
         </div>
         <div class="row">
             <div class="col-lg-12">
-                <div class="col-lg-12" style="padding-top: 10px">
-                    <button type="button" class="btn btn-primary" ng-click="changePrefixAndSuffix()">Change prefix and suffix</button>
-                    <button type="button" class="btn btn-success" ng-click="changeSuggestions()">Change Suggestions</button>
-                    <button type="button" class="btn btn-danger" ng-click="reset()">Reset</button>
-                </div>
+                <button type="button" class="btn btn-primary" ng-click="changePrefixAndSuffix()">Change prefix and
+                    suffix
+                </button>
+                <button type="button" class="btn btn-success" ng-click="changeSuggestions()">Change Suggestions</button>
+                <button type="button" class="btn btn-info" ng-click="toggleReadOnly()">Toggle read only</button>
+                <button type="button" class="btn btn-danger" ng-click="reset()">Reset</button>
             </div>
         </div>
         <br>
         <div class="row">
             <div class="col-lg-12">
                 <textarea ng-model="content" id="ckeditorBox" ck="ck" name="ckeditorBox" options="options"
-                          ods-ckeditor></textarea>
+                          ods-ckeditor ng-disabled="isReadOnly"></textarea>
             </div>
         </div>
     </section>
