--- a/examples/forms/index.html
+++ b/examples/forms/index.html
@@ -36,6 +36,43 @@
 <body ng-controller="FormsController">
 <div class="container-fluid">
 
+    <!--<section class="content-header">-->
+        <!--<div class="starter-template">-->
+            <!--<h1>AngularJS Form Builder Bootstrap based.</h1>-->
+        <!--</div>-->
+        <!--<div class="row">-->
+            <!--<div class="col-lg-6">-->
+                <!--<button type="button" class="btn btn-primary" ng-click="parse1()">Parse test 1</button>-->
+                <!--<div class="row">-->
+                    <!--<div class="col-lg-12">-->
+                        <!--<b>Original:</b>-->
+                        <!--<div ng-bind-html="test1"></div>-->
+                    <!--</div>-->
+                <!--</div>-->
+                <!--<div class="row">-->
+                    <!--<div class="col-lg-12">-->
+                        <!--<b>Parsed:</b>-->
+                        <!--<div ng-bind-html="templateResult1"></div>-->
+                    <!--</div>-->
+                <!--</div>-->
+            <!--</div>-->
+            <!--<div class="col-lg-6">-->
+                <!--<button type="button" class="btn btn-success" ng-click="parse2()">Parse test 2</button>-->
+                <!--<div class="row">-->
+                    <!--<div class="col-lg-12">-->
+                        <!--<b>Original:</b>-->
+                        <!--<div ng-bind-html="test2"></div>-->
+                    <!--</div>-->
+                <!--</div>-->
+                <!--<div class="row">-->
+                    <!--<div class="col-lg-12">-->
+                        <!--<b>Parsed:</b>-->
+                        <!--<div ng-bind-html="templateResult2"></div>-->
+                    <!--</div>-->
+                <!--</div>-->
+            <!--</div>-->
+        <!--</div>-->
+    <!--</section>-->
     <section class="content-header">
         <h1>Forms Builder</h1>
     </section>
@@ -77,6 +114,6 @@
 <script src="app.js"></script>
 <!-- endinject -->
 <!-- endbuild -->
-
+<!--<script src="../bower_components/ckeditor/plugins/autocomplete/plugin.js"></script>-->
 </body>
 </html>
