--- a/examples/jsignature/index.html
+++ b/examples/jsignature/index.html
@@ -96,6 +96,7 @@
 <script src="../bower_components/angular/angular.js"></script>
 <script src="../bower_components/angular-sanitize/angular-sanitize.js"></script>
 <script src="../bower_components/angular-messages/angular-messages.js"></script>
+<script src="../bower_components/angular-resource/angular-resource.js"></script>
 <script src="../bower_components/jSignature/src/jSignature.js"></script>
 <script src="../bower_components/jSignature/src/plugins/jSignature.CompressorBase30.js"></script>
 <script src="../bower_components/jSignature/src/plugins/jSignature.CompressorSVG.js"></script>
