--- a/examples/jsignature/index.html
+++ b/examples/jsignature/index.html
@@ -38,7 +38,7 @@
 
     <div class="starter-template">
         <form name="example" role="form" novalidate ng-submit="submit()" show-validation>
-            <h1>J-Signature</h1>
+            <h1>J-Signature Wrapper Directive.</h1>
             <div class="row">
                 <div class="col-lg-12">
                     <button type="submit" ng-disabled="example.$invalid" class="btn btn-primary">
@@ -47,12 +47,12 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-xs-6 col-md-6 col-lg-6">
+                <div class="col-xs-4 col-md-4 col-lg-4">
                     <h3>Component</h3>
                     <div style="padding-top: 1px;">
                         <div class="form-group" ng-class="{'has-error': example.testSig.$invalid}">
                             <ods-signature name="testSig" ng-model="model" ng-disabled="disabled"
-                                           ng-required="required" on-change="onChange(model)"></ods-signature>
+                                           ng-required="required" on-change="onChange()"></ods-signature>
                             <div ng-show="example.testSig.$invalid">
                                 <p class="help-block"
                                    ng-show="example.testSig.$error.required">
@@ -62,11 +62,17 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-xs-6 col-md-6 col-lg-6">
+                <div class="col-xs-4 col-md-4 col-lg-4">
                     <h3>Result</h3>
                     <div style="border: 1px solid #ddd;">
-                        <img ng-src="{{model.sig}}" alt="">
+                        <img ng-src="{{model}}" alt="">
                     </div>
+                </div>
+                <div class="col-xs-4 col-md-4 col-lg-4">
+                    <h3>Result of 'onChange' method.</h3>
+                    <textarea class="form-control" name="selected" rows="8">
+                        {{selected}}
+                    </textarea>
                 </div>
             </div>
             <div class="row">
@@ -75,15 +81,59 @@
                     <button type="button" class="btn btn-default" ng-click="enableComponent()">Enable</button>
                     <button type="button" class="btn btn-primary" ng-click="getSignature()">Get Signature</button>
                     <button type="button" class="btn btn-success" ng-click="setSignature()">Set Signature</button>
-                    <button type="button" class="btn btn-warning" ng-click="toggleRequired()">{{required ? 'Set not required' : 'Set required'}}</button>
+                    <button type="button" class="btn btn-warning" ng-click="toggleRequired()">{{required ? 'Set not
+                        required' : 'Set required'}}
+                    </button>
                 </div>
             </div>
-            <div class="row" style="padding-top: 10px">
+        </form>
+        <br>
+        <br>
+        <form name="example1" role="form" novalidate ng-submit="submit1()" show-validation>
+            <div class="row">
                 <div class="col-lg-12">
+                    <button type="submit" ng-disabled="example1.$invalid" class="btn btn-primary">
+                        <span class="fa fa-floppy-o"></span>&nbsp;<span>Submit1</span>
+                    </button>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-xs-4 col-md-4 col-lg-4">
+                    <h3>Component</h3>
+                    <div style="padding-top: 1px;">
+                        <div class="form-group" ng-class="{'has-error': example1.testSig1.$invalid}">
+                            <ods-signature name="testSig1" ng-model="model1" ng-disabled="disabled1"
+                                           ng-required="required1" on-change="onChange1()"></ods-signature>
+                            <div ng-show="example1.testSig1.$invalid">
+                                <p class="help-block"
+                                   ng-show="example1.testSig1.$error.required">
+                                    This field is required.
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-xs-4 col-md-4 col-lg-4">
+                    <h3>Result</h3>
+                    <div style="border: 1px solid #ddd;">
+                        <img ng-src="{{model1}}" alt="">
+                    </div>
+                </div>
+                <div class="col-xs-4 col-md-4 col-lg-4">
                     <h3>Result of 'onChange' method.</h3>
-                    <textarea class="form-control" name="selected" cols="8">
-                        {{selected}}
+                    <textarea class="form-control" name="selected" rows="8">
+                        {{selected1}}
                     </textarea>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-lg-12" style="padding-top: 10px">
+                    <button type="button" class="btn" ng-click="disableComponent1()">Disable</button>
+                    <button type="button" class="btn btn-default" ng-click="enableComponent1()">Enable</button>
+                    <button type="button" class="btn btn-primary" ng-click="getSignature1()">Get Signature</button>
+                    <button type="button" class="btn btn-success" ng-click="setSignature1()">Set Signature</button>
+                    <button type="button" class="btn btn-warning" ng-click="toggleRequired1()">{{required1 ? 'Set not required' : 'Set required'}}
+                    </button>
                 </div>
             </div>
         </form>
