Added some print view components in forms.

--- a/examples/forms/index.html
+++ b/examples/forms/index.html
@@ -25,6 +25,18 @@
     <!-- endinject -->
     <!-- endbuild -->
 
+    <!--<style type="text/css">-->
+
+        <!--.form-print{-->
+            <!--background-color: #0f74a8;-->
+        <!--}-->
+
+        <!--.form-print1{-->
+            <!--background-color: #00cc66;-->
+        <!--}-->
+
+    <!--</style>-->
+
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
