--- a/examples/index.html
+++ b/examples/index.html
@@ -5,7 +5,7 @@
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
     <meta name="description" content="">
     <meta name="author" content="">
-    <link rel="icon" href="../../favicon.ico">
+    <link rel="icon" href="favicon.ico">
 
     <title>ODS-Lib tools set for AngularJS using Bootstrap</title>
 
@@ -65,16 +65,24 @@
 
     <!-- Main component for a primary marketing message or call to action -->
     <div class="jumbotron">
-        <h1>Navbar example</h1>
-        <p>This example is a quick exercise to illustrate how the default, static and fixed to top navbar work. It includes the responsive CSS and HTML, so it also adapts to your viewport and device.</p>
-        <p>To see the difference between static and fixed top navbars, just scroll.</p>
-        <p>
-            <a class="btn btn-lg btn-primary" href="../../components/#navbar" role="button">View navbar docs »</a>
-        </p>
+        <section id="getting_started">
+
+            <div class="page-header">
+                <h1>Bootstrap components samples written in AngularJS.</h1>
+            </div>
+            <p>
+                This project is tools lib for a common use in software development, It include some useful Directives, Services and a Toolset.
+            </p>
+            <h3>Directives developed</h3>
+            <ul>
+                <li><b>Signature Directive:</b> It is a wrapper directive for jSignature library, is a JavaScript widget (a jQuery plugin) that simplifies creation of a signature capture field in a browser window, allowing a user to draw a signature using mouse, pen, or finger.</li>
+                <li><b>Form Builder Directive:</b> It is a form builder directive developed over AngularJS and Bootstrap.</li>
+                <li><b>CKEditor Directive:</b> It is a CKEditor directive.</li>
+            </ul>
+        </section>
     </div>
 
 </div> <!-- /container -->
-
 
 <!-- Bootstrap core JavaScript
 ================================================== -->
