Added hide form title.

--- a/examples/forms/index.html
+++ b/examples/forms/index.html
@@ -20,8 +20,8 @@
     <link rel="stylesheet" href="../bower_components/angular-dialog-service/dist/dialogs.css">
     <!-- endinject -->
     <!-- inject:css -->
-    <link rel="stylesheet" href="../dist/forms/style.css">
-    <link rel="stylesheet" href="../dist/steps-indicator/style.css">
+    <link rel="stylesheet" href="../../dist/forms/style.css">
+    <link rel="stylesheet" href="../../dist/steps-indicator/style.css">
     <!-- endinject -->
     <!-- endbuild -->
 
@@ -123,7 +123,7 @@
 <script src="../bower_components/bootstrap-ui-datetime-picker/dist/datetime-picker.js"></script>
 <!-- endinject -->
 <!-- inject:js -->
-<script src="../dist/ods-lib.js"></script>
+<script src="../../dist/ods-lib.js"></script>
 <script src="app.js"></script>
 <!-- endinject -->
 <!-- endbuild -->
