--- a/examples/jsignature/index.html
+++ b/examples/jsignature/index.html
@@ -20,8 +20,8 @@
     <link rel="stylesheet" href="../bower_components/angular-dialog-service/dist/dialogs.css">
     <!-- endinject -->
     <!-- inject:css -->
-    <link rel="stylesheet" href="../../dist/forms/style.css">
-    <link rel="stylesheet" href="../../dist/steps-indicator/style.css">
+    <link rel="stylesheet" href="../dist/forms/style.css">
+    <link rel="stylesheet" href="../dist/steps-indicator/style.css">
     <!-- endinject -->
     <!-- endbuild -->
 
@@ -162,6 +162,7 @@
 <script src="../bower_components/angular-translate/angular-translate.js"></script>
 <script src="../bower_components/angular-jquery/dist/angular-jquery.js"></script>
 <script src="../bower_components/ckeditor/ckeditor.js"></script>
+<script src="../bower_components/ngstorage/ngStorage.js"></script>
 <script src="../bower_components/bootstrap/dist/js/bootstrap.js"></script>
 <script src="../bower_components/angular-bootstrap/ui-bootstrap-tpls.js"></script>
 <script src="../bower_components/angular-bootstrap-toggle/dist/angular-bootstrap-toggle.min.js"></script>
@@ -171,7 +172,7 @@
 <script src="../bower_components/bootstrap-ui-datetime-picker/dist/datetime-picker.js"></script>
 <!-- endinject -->
 <!-- inject:js -->
-<script src="../../dist/ods-lib.js"></script>
+<script src="../dist/ods-lib.js"></script>
 <script src="app.js"></script>
 <!-- endinject -->
 <!-- endbuild -->
