Fixed errors with Address sample and CKEditor.

--- a/examples/address/index.html
+++ b/examples/address/index.html
@@ -9,8 +9,22 @@
 
     <!-- Bootstrap -->
     <link rel="stylesheet" href="../bower_components/bootstrap/dist/css/bootstrap.css">
-
     <link rel="stylesheet" href="../bower_components/font-awesome/css/font-awesome.min.css">
+
+    <!-- Bower dependencies -->
+    <!-- build:css css/seed.min.css -->
+    <!-- bower:css -->
+    <link rel="stylesheet" href="../bower_components/angular-ui-select/dist/select.css">
+    <link rel="stylesheet" href="../bower_components/nz-toggle/dist/nz-toggle.css">
+    <link rel="stylesheet" href="../bower_components/angular-confirm/dist/angular-confirm.min.css">
+    <link rel="stylesheet" href="../bower_components/angular-bootstrap-toggle/dist/angular-bootstrap-toggle.min.css">
+    <link rel="stylesheet" href="../bower_components/angular-dialog-service/dist/dialogs.css">
+    <!-- endinject -->
+    <!-- inject:css -->
+    <link rel="stylesheet" href="../dist/forms/style.css">
+    <link rel="stylesheet" href="../dist/steps-indicator/style.css">
+    <!-- endinject -->
+    <!-- endbuild -->
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -34,34 +48,39 @@
 
 </div>
 
-<!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-<script src="../bower_components/bower_components/jquery/dist/jquery.js"></script>
+<!-- build:js js/seed.min.js -->
+<!-- bower:js -->
+<script src="../bower_components/jquery/dist/jquery.js"></script>
 <script src="../bower_components/angular/angular.js"></script>
+<script src="../bower_components/angular-sanitize/angular-sanitize.js"></script>
+<script src="../bower_components/angular-messages/angular-messages.js"></script>
+<script src="../bower_components/angular-resource/angular-resource.js"></script>
+<script src="../bower_components/jSignature/src/jSignature.js"></script>
+<script src="../bower_components/jSignature/src/plugins/jSignature.CompressorBase30.js"></script>
+<script src="../bower_components/jSignature/src/plugins/jSignature.CompressorSVG.js"></script>
+<script src="../bower_components/jSignature/src/plugins/jSignature.UndoButton.js"></script>
+<script src="../bower_components/webcam-directive/dist/webcam.min.js"></script>
+<script src="../bower_components/angular-ui-select/dist/select.js"></script>
+<script src="../bower_components/nz-toggle/dist/nz-toggle.js"></script>
+<script src="../bower_components/angular-drag-and-drop-lists/angular-drag-and-drop-lists.js"></script>
+<script src="../bower_components/underscore/underscore.js"></script>
+<script src="../bower_components/angular-confirm/dist/angular-confirm.min.js"></script>
+<script src="../bower_components/angular-translate/angular-translate.js"></script>
+<script src="../bower_components/angular-jquery/dist/angular-jquery.js"></script>
+<script src="../bower_components/ckeditor/ckeditor.js"></script>
+<script src="../bower_components/ngstorage/ngStorage.js"></script>
 <script src="../bower_components/bootstrap/dist/js/bootstrap.js"></script>
 <script src="../bower_components/angular-bootstrap/ui-bootstrap-tpls.js"></script>
+<script src="../bower_components/angular-bootstrap-toggle/dist/angular-bootstrap-toggle.min.js"></script>
+<script src="../bower_components/angular-dialog-service/dist/dialogs.js"></script>
+<script src="../bower_components/angular-dialog-service/dist/dialogs-default-translations.js"></script>
+<script src="../bower_components/angular-bootstrap-affix/dist/angular-bootstrap-affix.js"></script>
+<script src="../bower_components/bootstrap-ui-datetime-picker/dist/datetime-picker.js"></script>
+<!-- endinject -->
+<!-- inject:js -->
 <script src="../dist/ods-lib.js"></script>
 <script src="app.js"></script>
+<!-- endinject -->
+<!-- endbuild -->
 </body>
 </html>
-
-
-<!--<!DOCTYPE html>-->
-<!--<html ng-app="example">-->
-
-<!--<head>-->
-    <!--<meta charset="utf-8"/>-->
-    <!--<title>AngularJS ODS Lib</title>-->
-    <!--<script>document.write('<base href="' + document.location + '" />');</script>-->
-    <!--<link rel="stylesheet" href="../bower_components/bootstrap/dist/css/bootstrap.css">-->
-    <!--<script src="../bower_components/jquery/dist/jquery.js"></script>-->
-    <!--<script src="../bower_components/angular/angular.js"></script>-->
-    <!--<script src="../bower_components/angular-bootstrap/ui-bootstrap-tpls.js"></script>-->
-    <!--<script src="../dist/ods-lib.js"></script>-->
-    <!--<script src="app.js"></script>-->
-<!--</head>-->
-
-<!--<body ng-controller="MainCtrl">-->
-
-<!--</body>-->
-
-<!--</html>-->
