--- a/examples/index.html
+++ b/examples/index.html
@@ -48,6 +48,7 @@
                         <li><a href="address/index.html">Address directive</a></li>
                         <li><a href="ckeditor/index.html">CKEditor plugin Sample</a></li>
                         <li><a href="jsignature/index.html">JSignature directive</a></li>
+                        <li><a href="steps-indicator/index.html">Steps Indicator directive</a></li>
                         <!--<li><a href="#">Another action</a></li>-->
                         <!--<li><a href="#">Something else here</a></li>-->
                         <!--<li role="separator" class="divider"></li>-->
