Added Reports-Viewer component.

--- a/examples/jsignature/index.html
+++ b/examples/jsignature/index.html
@@ -16,8 +16,10 @@
     <link rel="stylesheet" href="../bower_components/angular-ui-select/dist/select.css">
     <link rel="stylesheet" href="../bower_components/nz-toggle/dist/nz-toggle.css">
     <link rel="stylesheet" href="../bower_components/angular-confirm/dist/angular-confirm.min.css">
+    <link rel="stylesheet" href="../bower_components/bootstrap/dist/css/bootstrap.css">
     <link rel="stylesheet" href="../bower_components/angular-bootstrap-toggle/dist/angular-bootstrap-toggle.min.css">
     <link rel="stylesheet" href="../bower_components/angular-dialog-service/dist/dialogs.css">
+    <link rel="stylesheet" href="../bower_components/angular-datatables/dist/plugins/bootstrap/datatables.bootstrap.min.css">
     <!-- endinject -->
     <!-- inject:css -->
     <link rel="stylesheet" href="../dist/forms/style.css">
@@ -161,13 +163,29 @@
 <script src="../bower_components/angular-jquery/dist/angular-jquery.js"></script>
 <script src="../bower_components/ckeditor/ckeditor.js"></script>
 <script src="../bower_components/ngstorage/ngStorage.js"></script>
-<script src="../bower_components/bootstrap/dist/js/bootstrap.js"></script>
+<script src="../bower_components/moment/moment.js"></script>
+<script src="../bower_components/datatables.net/js/jquery.dataTables.js"></script>
+<script src="../bower_components/pdfmake/build/pdfmake.js"></script>
+<script src="../bower_components/pdfmake/build/vfs_fonts.js"></script>
 <script src="../bower_components/angular-bootstrap/ui-bootstrap-tpls.js"></script>
 <script src="../bower_components/angular-bootstrap-toggle/dist/angular-bootstrap-toggle.min.js"></script>
 <script src="../bower_components/angular-dialog-service/dist/dialogs.js"></script>
 <script src="../bower_components/angular-dialog-service/dist/dialogs-default-translations.js"></script>
 <script src="../bower_components/angular-bootstrap-affix/dist/angular-bootstrap-affix.js"></script>
 <script src="../bower_components/bootstrap-ui-datetime-picker/dist/datetime-picker.js"></script>
+<script src="../bower_components/angular-moment/angular-moment.js"></script>
+<script src="../bower_components/angular-datatables/dist/angular-datatables.js"></script>
+<script src="../bower_components/angular-datatables/dist/plugins/bootstrap/angular-datatables.bootstrap.js"></script>
+<script src="../bower_components/angular-datatables/dist/plugins/colreorder/angular-datatables.colreorder.js"></script>
+<script src="../bower_components/angular-datatables/dist/plugins/columnfilter/angular-datatables.columnfilter.js"></script>
+<script src="../bower_components/angular-datatables/dist/plugins/light-columnfilter/angular-datatables.light-columnfilter.js"></script>
+<script src="../bower_components/angular-datatables/dist/plugins/colvis/angular-datatables.colvis.js"></script>
+<script src="../bower_components/angular-datatables/dist/plugins/fixedcolumns/angular-datatables.fixedcolumns.js"></script>
+<script src="../bower_components/angular-datatables/dist/plugins/fixedheader/angular-datatables.fixedheader.js"></script>
+<script src="../bower_components/angular-datatables/dist/plugins/scroller/angular-datatables.scroller.js"></script>
+<script src="../bower_components/angular-datatables/dist/plugins/tabletools/angular-datatables.tabletools.js"></script>
+<script src="../bower_components/angular-datatables/dist/plugins/buttons/angular-datatables.buttons.js"></script>
+<script src="../bower_components/angular-datatables/dist/plugins/select/angular-datatables.select.js"></script>
 <!-- endinject -->
 <!-- inject:js -->
 <script src="../dist/ods-lib.js"></script>
