Added image crop upload.

--- a/examples/forms/index.html
+++ b/examples/forms/index.html
@@ -16,6 +16,7 @@
     <link rel="stylesheet" href="../bower_components/angular-ui-select/dist/select.css">
     <link rel="stylesheet" href="../bower_components/nz-toggle/dist/nz-toggle.css">
     <link rel="stylesheet" href="../bower_components/angular-confirm/dist/angular-confirm.min.css">
+    <link rel="stylesheet" href="../bower_components/ui-cropper/compile/minified/ui-cropper.css">
     <link rel="stylesheet" href="../bower_components/bootstrap/dist/css/bootstrap.css">
     <link rel="stylesheet" href="../bower_components/angular-bootstrap-toggle/dist/angular-bootstrap-toggle.min.css">
     <link rel="stylesheet" href="../bower_components/angular-dialog-service/dist/dialogs.css">
@@ -121,6 +122,8 @@
 <script src="../bower_components/datatables.net/js/jquery.dataTables.js"></script>
 <script src="../bower_components/pdfmake/build/pdfmake.js"></script>
 <script src="../bower_components/pdfmake/build/vfs_fonts.js"></script>
+<script src="../bower_components/ui-cropper/compile/minified/ui-cropper.js"></script>
+<script src="../bower_components/ng-file-upload/ng-file-upload.js"></script>
 <script src="../bower_components/angular-bootstrap/ui-bootstrap-tpls.js"></script>
 <script src="../bower_components/angular-bootstrap-toggle/dist/angular-bootstrap-toggle.min.js"></script>
 <script src="../bower_components/angular-dialog-service/dist/dialogs.js"></script>
