--- a/examples/img-upload/index.html
+++ b/examples/img-upload/index.html
@@ -35,14 +35,79 @@
     <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
     <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
+    <style>
+        /*.cropper-wrapper {*/
+            /*display: -webkit-box;*/
+            /*display: -ms-flexbox;*/
+            /*display: flex;*/
+            /*-ms-flex-wrap: wrap;*/
+            /*flex-wrap: wrap;*/
+            /*-webkit-box-pack: space-evenly;*/
+            /*-ms-flex-pack: space-evenly;*/
+            /*justify-content: space-evenly;*/
+            /*-webkit-box-align: start;*/
+            /*-ms-flex-align: start;*/
+            /*align-items: flex-start;*/
+            /*padding: 30px 15px;*/
+            /*background-color: #e9e9e9;*/
+            /*box-shadow: inset 0 0 10px rgba(0, 0, 0, 0.2);*/
+        /*}*/
+
+        /*.crop-area {*/
+            /*margin: 0 10px 15px;*/
+        /*}*/
+
+        /*.crop-area .load-button .btn {*/
+            /*box-shadow: 0 0 10px rgba(0, 0, 0, 0.4);*/
+            /*border-radius: 0;*/
+        /*}*/
+
+        /*.crop-area canvas {*/
+            /*max-width: 100% !important;*/
+        /*}*/
+
+        /*ui-cropper {*/
+            /*margin-bottom: 15px;*/
+        /*}*/
+
+        /*ui-cropper canvas {*/
+            /*box-shadow: 0 0 10px rgba(0, 0, 0, 0.8);*/
+        /*}*/
+
+        /*.cropped-image {*/
+            /*margin: 0 10px 15px;*/
+            /*box-shadow: 0 0 10px rgba(0, 0, 0, 0.8);*/
+        /*}*/
+
+        /*.cropped-image > img {*/
+            /*max-width: 100%;*/
+        /*}*/
+
+        /*.default-img {*/
+            /*margin-left: auto;*/
+            /*margin-right: auto;*/
+            /*width: 30%;*/
+        /*}*/
+    </style>
 
 </head>
 <body ng-controller="MainCtrl">
 <div class="container">
 
     <div class="starter-template">
-        <h1>Report-View Directive</h1>
-        <ods-reports reports-group="reportsGroup"></ods-reports>
+        <h1>Image upload directive</h1>
+        <ods-img-upload
+                original="original"
+                ng-model="image"
+                css-class="img-thumbnail"
+                display-image="true"
+                mode="insert"
+                upload-text="Upload image..."
+                size="lg"
+                default-image="defaultPicture"
+                area-type="square"
+                on-save="savePictureOfChart()">
+        </ods-img-upload>
     </div>
 
 </div>
