--- a/examples/index.html
+++ b/examples/index.html
@@ -50,6 +50,7 @@
                         <li><a href="jsignature/index.html">JSignature directive</a></li>
                         <li><a href="steps-indicator/index.html">Steps Indicator directive</a></li>
                         <li><a href="reports/index.html">Reports Viewer directive</a></li>
+                        <li><a href="img-upload/index.html">Image Upload (Crop editing) directive</a></li>
                         <!--<li><a href="#">Another action</a></li>-->
                         <!--<li><a href="#">Something else here</a></li>-->
                         <!--<li role="separator" class="divider"></li>-->
