--- a/examples/jsignature/index.html
+++ b/examples/jsignature/index.html
@@ -24,6 +24,7 @@
     <!-- endinject -->
     <!-- inject:css -->
     <link rel="stylesheet" href="../dist/forms/style.css">
+    <link rel="stylesheet" href="../dist/reports/style.css">
     <link rel="stylesheet" href="../dist/steps-indicator/style.css">
     <!-- endinject -->
     <!-- endbuild -->
