--- a/examples/reports/index.html
+++ b/examples/reports/index.html
@@ -25,6 +25,7 @@
     <!-- endinject -->
     <!-- inject:css -->
     <link rel="stylesheet" href="../dist/forms/style.css">
+    <link rel="stylesheet" href="../dist/reports/style.css">
     <link rel="stylesheet" href="../dist/steps-indicator/style.css">
     <!-- endinject -->
     <!-- endbuild -->
