--- a/examples/address/index.html
+++ b/examples/address/index.html
@@ -25,8 +25,9 @@
     <!-- endinject -->
     <!-- inject:css -->
     <link rel="stylesheet" href="../dist/forms/style.css">
-    <link rel="stylesheet" href="../dist/reports/style.css">
     <link rel="stylesheet" href="../dist/steps-indicator/style.css">
+    <link rel="stylesheet" href="../dist/reports/style.css">
+    <link rel="stylesheet" href="../dist/wizard-steps/style.css">
     <!-- endinject -->
     <!-- endbuild -->
 
