--- a/examples/jsignature/index.html
+++ b/examples/jsignature/index.html
@@ -26,6 +26,7 @@
     <link rel="stylesheet" href="../dist/forms/style.css">
     <link rel="stylesheet" href="../dist/reports/style.css">
     <link rel="stylesheet" href="../dist/steps-indicator/style.css">
+    <link rel="stylesheet" href="../dist/wizard-steps/style.css">
     <!-- endinject -->
     <!-- endbuild -->
 
