Added selected-filtered build task.

--- a/examples/index.html
+++ b/examples/index.html
@@ -89,6 +89,7 @@
                     can handle all address fields.</li>
                 <li><b>Image Upload (Crop editing) Directive:</b> Useful directive that allow to upload images(profile images, logo images) with crop support.</li>
                 <li><b>Report Viewer Directive:</b> Report Viewer directive that allow to parametrize and visualize reports include report params.</li>
+                <li><b>Select with Filter Support Directive:</b> Select directive with dynamic filter support.</li>
             </ul>
         </section>
     </div>
