--- a/examples/index.html
+++ b/examples/index.html
@@ -51,6 +51,7 @@
                         <li><a href="wizard-steps/index.html">Wizard Steps directive</a></li>
                         <li><a href="reports/index.html">Reports Viewer directive</a></li>
                         <li><a href="img-upload/index.html">Image Upload (Crop editing) directive</a></li>
+                        <li><a href="select-filtered/index.html">Bootstrap Select directive with dynamic filter</a></li>
                         <!--<li><a href="#">Another action</a></li>-->
                         <!--<li><a href="#">Something else here</a></li>-->
                         <!--<li role="separator" class="divider"></li>-->
@@ -89,7 +90,7 @@
                     can handle all address fields.</li>
                 <li><b>Image Upload (Crop editing) Directive:</b> Useful directive that allow to upload images(profile images, logo images) with crop support.</li>
                 <li><b>Report Viewer Directive:</b> Report Viewer directive that allow to parametrize and visualize reports include report params.</li>
-                <li><b>Select with Filter Support Directive:</b> Select directive with dynamic filter support.</li>
+                <li><b>Bootstrap Select with Filter Support Directive:</b> Select directive with dynamic filter support.</li>
             </ul>
         </section>
     </div>
