Changed address directive by ods-address.

--- a/examples/address/index.html
+++ b/examples/address/index.html
@@ -25,9 +25,9 @@
     <!-- endinject -->
     <!-- inject:css -->
     <link rel="stylesheet" href="../dist/forms/style.css">
+    <link rel="stylesheet" href="../dist/wizard-steps/style.css">
     <link rel="stylesheet" href="../dist/reports/style.css">
     <link rel="stylesheet" href="../dist/steps-indicator/style.css">
-    <link rel="stylesheet" href="../dist/wizard-steps/style.css">
     <!-- endinject -->
     <!-- endbuild -->
 
@@ -45,9 +45,9 @@
     <div class="starter-template">
         <h1>Address directive</h1>
         <form>
-            <address lable="My Address" ng-model="address" countries="countries"
+            <ods-address lable="My Address" ng-model="address" countries="countries"
                      states="states">
-            </address>
+            </ods-address>
         </form>
     </div>
 
