Fixed required in select-filtered.

--- a/examples/wizard-steps/index.html
+++ b/examples/wizard-steps/index.html
@@ -46,6 +46,11 @@
         <form>
             <wizard-steps ng-model="steps"></wizard-steps>
         </form>
+
+        <div class="box-footer">
+            <button type="submit" class="btn btn-success" ng-click="enableSecondStep()">Enable second step</button>
+            <button type="submit" class="btn btn-success">Next</button>
+        </div>
     </div>
 
 </div>
