--- a/examples/select-filtered/index.html
+++ b/examples/select-filtered/index.html
@@ -43,21 +43,51 @@
 <body ng-controller="MainCtrl">
 <div class="container">
 
-    <div class="row">
-        <br>
-    </div>
-    <div class="row">
-        <div class="col-lg-4 col-md-4">
-            <select-filtered ng-model="selectdWorkingWeek" label="Working Weeks" placeholder="Select a working week..."
-                             list="list" filters="filters" tooltip="Working Weeks"
-                             on-select="onSelect()"></select-filtered>
-        </div>
-        <div class="col-lg-4 col-md-4">
-            {{selectdWorkingWeek}}
-        </div>
-        <div class="col-lg-4 col-md-4">
+    <div class="starter-template">
+        <form name="example" role="form" novalidate ng-submit="submit()" show-validation>
+            <h1>J-Signature Wrapper Directive.</h1>
+            <div class="row">
+                <div class="col-lg-12">
+                    <button type="submit" ng-disabled="example.$invalid" class="btn btn-primary">
+                        <span class="fa fa-floppy-o"></span>&nbsp;<span>Submit</span>
+                    </button>
+                </div>
+            </div>
+            <div class="row">
+                <br>
+            </div>
+            <div class="row">
+                <div class="col-lg-4 col-md-4">
+                    <div class="form-group" ng-class="{'has-error': example.workingWeeks.$invalid}">
+                        <select-filtered ng-model="selectdWorkingWeek" label="Working Weeks" name="workingWeeks"
+                                         placeholder="Select a working week..." ng-required="required"
+                                         list="list" filters="filters" tooltip="Working Weeks"
+                                         on-select="onSelect()"></select-filtered>
+                        <div ng-show="example.workingWeeks.$invalid">
+                            <p class="help-block" ng-show="example.workingWeeks.$error.uiSelectRequired">
+                                Field required!!!
+                            </p>
+                        </div>
+                        <!--<div>{{example.workingWeeks.$error}}</div>-->
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-4">
+                    {{selectedWorkingWeek}}
+                </div>
+                <div class="col-lg-4 col-md-4">
 
-        </div>
+                </div>
+            </div>
+            <div class="row">
+                <br>
+            </div>
+            <!--<div class="row">-->
+                <!--<div class="col-lg-12">-->
+                    <!--<button type="submit" class="btn btn-success" ng-click="toggleRequired()">Toggle Required</button>-->
+                    <!--<button type="submit" class="btn btn-default" ng-click="toggleDisabled()">Toggle Disabled</button>-->
+                <!--</div>-->
+            <!--</div>-->
+        </form>
     </div>
 </div>
 
@@ -107,6 +137,7 @@
 <script src="../bower_components/angular-datatables/dist/plugins/tabletools/angular-datatables.tabletools.js"></script>
 <script src="../bower_components/angular-datatables/dist/plugins/buttons/angular-datatables.buttons.js"></script>
 <script src="../bower_components/angular-datatables/dist/plugins/select/angular-datatables.select.js"></script>
+<script src="../bower_components/angular-pdfjs-viewer/dist/angular-pdfjs-viewer.js"></script>
 <!-- endinject -->
 <!-- inject:js -->
 <script src="../dist/ods-lib.js"></script>
